type casting final push